# solid-broccoli

./: README.md
QML_Camera/: CMakeLists.txt
QML_ML_Camera/: .qmake.stash  Makefile  QML_ML_Camera.pro
QML_ML_Camera/app/: AlbumListPage.qml  AlbumPage.qml  CameraPage.qml  CameraProcessor.cpp  CameraProcessor.h  InputDialog.qml  LoggerPage.qml  MainPage.qml  Makefile  Makefile.Debug  Makefile.Release  MovieAlbumListPage.qml  MovieAlbumPage.qml  MoviePage.qml  MovieProcessor.cpp  MovieProcessor.h  PageTheme.qml  PicturePage.qml  PictureProvider.cpp  PictureProvider.h  SettingSwitcher.qml  Style.qml  ToolBarTheme.qml  app.pro  app_resource.rc  main.cpp  main.qml  qml.qrc  qml_qmlcache.qrc
QML_ML_Camera/camera-core/: Album.cpp  Album.h  AlbumDAO.cpp  AlbumDAO.h  AlbumModel.cpp  AlbumModel.h  DatabaseManager.cpp  DatabaseManager.h  LoggerDAO.cpp  LoggerDAO.h  LoggerModel.cpp  LoggerModel.h  Makefile  Makefile.Debug  Makefile.Release  Movie.cpp  Movie.h  MovieAlbum.cpp  MovieAlbumDAO.cpp  MovieAlbumDAO.h  MovieAlbumModel.cpp  MovieAlbumModel.h  MovieDAO.cpp  MovieDAO.h  MovieModel.cpp  MovieModel.h  Picture.cpp  Picture.h  PictureDAO.cpp  PictureDAO.h  PictureModel.cpp  PictureModel.h  camera-core.pro  camera-core_global.h
QML_ML_Camera/logger-core/: Makefile  Makefile.Debug  Makefile.Release  logger-core.pro  logger-core_global.h  logger.cpp  logger.h  loggingcategories.cpp  loggingcategories.h
